k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notesapp-api
spec:
  selector:
    app: notesapp-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
