k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notesapp-db
spec:
  selector:
    app: notesapp-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
